init site with mobile first

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Media Query</title>
 </head>
 <body>
@@ -25,7 +26,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, debitis porro sapiente aliquid temporibus pariatur nulla quam. Voluptatibus blanditiis itaque sunt modi, error eos inventore, quis expedita quae veniam odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sed minima dolorum aliquam culpa recusandae, deleniti perferendis adipisci rerum tempore sequi excepturi amet aliquid, totam saepe. Omnis velit laborum expedita!</p>
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, debitis porro sapiente aliquid temporibus pariatur nulla quam. Voluptatibus blanditiis itaque sunt modi, error eos inventore, quis expedita quae veniam odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sed minima dolorum aliquam culpa recusandae, deleniti perferendis adipisci rerum tempore sequi excepturi amet aliquid, totam saepe. Omnis velit laborum expedita!</p>
-            
+
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, debitis porro sapiente aliquid temporibus pariatur nulla quam. Voluptatibus blanditiis itaque sunt modi, error eos inventore, quis expedita quae veniam odio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sed minima dolorum aliquam culpa recusandae, deleniti perferendis adipisci rerum tempore sequi excepturi amet aliquid, totam saepe. Omnis velit laborum expedita!</p>
         </article>
     </main>
